Replace and correct test. Include IDE suggested improvements